# cppbpe

./: .gitignore  Makefile  README.md  bpe_core.cpp  bpe_vx_cpp.py  demo.py  demo1.py  hf_tokenize_data.py  hf_train_bpe.py  pyproject.toml  run.sh  setup.py  test.py  train.sh  train_bpe.py  train_hf.sh
bpe_tokenizer_hf/openwebtext/: tokenizer.json
bpe_tokenizer_hf/tinystories/: tokenizer.json
dev/: bpe.cpp  bpe_heap.cpp  bpe_v1.py  compile_bpe.sh  compile_bpe_heap.sh  demo.py
